# python2-json

./: README.md  json.py  pyproject.toml  vermin.ini
tests/: test_dumps.py  test_loads.py
